--- a/src/assets/www/tests/index.html
+++ b/src/assets/www/tests/index.html
@@ -9,7 +9,9 @@
 		<div id="qunit"></div>
 		<div id="qunit-fixture"></div>
 		<script src="http://code.jquery.com/qunit/qunit-1.11.0.js"></script>
-		<script src="../parsing.js"></script>
-		<script src="tests.js"></script>
+		<script src="../parsers/hnms.js"></script>
+		<script src="../parsers/noaa.js"></script>
+		<script src="hnmsTests.js"></script>
+		<script src="noaaTests.js"></script>
 	</body>
 </html>
