--- a/src/assets/www/index.html
+++ b/src/assets/www/index.html
@@ -6,6 +6,8 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <title>Greek Metars</title>
         <script type="text/javascript" src="cordova-2.5.0.js"></script>
+        <script type="text/javascript" src="parsers/hnms.js"></script>
+        <script type="text/javascript" src="parsers/noaa.js"></script>
         <script type="text/javascript" src="main.js"></script>
     </head>
     <body onload="onLoad()">
