--- a/src/assets/www/index.html
+++ b/src/assets/www/index.html
@@ -6,10 +6,14 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <title>Greek Metars</title>
         <script type="text/javascript" src="cordova-2.5.0.js"></script>
+        <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
         <script type="text/javascript" src="parsers/hnms.js"></script>
         <script type="text/javascript" src="parsers/noaa.js"></script>
         <script type="text/javascript" src="main.js"></script>
     </head>
     <body onload="onLoad()">
+	    <input type="text" id="code" />
+	    <button onclick="getLatestMetar()">Get latest METAR</button>
+	    <div id="result"></div>
     </body>
 </html>
