--- a/src/assets/www/index.html
+++ b/src/assets/www/index.html
@@ -5,15 +5,23 @@
         <meta name="format-detection" content="telephone=no" />
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <title>Greek Metars</title>
+		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.css" />
+
         <script type="text/javascript" src="cordova-2.5.0.js"></script>
-        <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+		<script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
         <script type="text/javascript" src="parsers/hnms.js"></script>
         <script type="text/javascript" src="parsers/noaa.js"></script>
         <script type="text/javascript" src="main.js"></script>
-    </head>
+        <script src="http://debug.phonegap.com/target/target-script-min.js#metar"></script>
+     </head>
     <body onload="onLoad()">
-	    <input type="text" id="code" />
-	    <button onclick="getLatestMetar()">Get latest METAR</button>
-	    <div id="result"></div>
+		<div data-role="page">
+			<div data-role="content">
+			    <input type="text" id="code" />
+			    <button onclick="getLatestMetar()">Get latest METAR</button>
+			    <div id="result"></div>
+			</div>
+		</div>
     </body>
 </html>
