--- a/src/assets/www/index.html
+++ b/src/assets/www/index.html
@@ -16,7 +16,18 @@
         <script src="http://debug.phonegap.com/target/target-script-min.js#metar"></script>
      </head>
     <body onload="onLoad()">
-		<div data-role="page">
+		<div data-role="page" data-theme="d">
+			<div data-role="panel" id="menu" data-theme="c">
+		        <ul data-role="listview" data-theme="d">
+		            <li data-icon="back"><a href="#demo-intro" data-rel="back">Demo intro</a></li>
+		        </ul>
+			</div><!-- /panel -->
+
+			<div data-role="header" data-theme="c">
+		        <a href="#menu" data-icon="bars" data-iconpos="notext" data-shadow="false" data-iconshadow="false">Menu</a>
+				<h1>jQuery Mobile Example</h1>
+			</div>
+
 			<div data-role="content">
 			    <input type="text" id="code" />
 			    <button onclick="getLatestMetar()">Get latest METAR</button>
