--- a/src/assets/www/index.html
+++ b/src/assets/www/index.html
@@ -32,7 +32,7 @@
 
 			<div data-role="content">
 			    <button onclick="refreshAll()">Refresh</button>
-			    <div id="allResults"></div>
+				<table id="allResults" data-role="table" class="ui-responsive"></table>
 			</div>
 		</div>
 
