--- a/src/assets/www/tests/index.html
+++ b/src/assets/www/tests/index.html
@@ -11,7 +11,9 @@
 		<script src="http://code.jquery.com/qunit/qunit-1.11.0.js"></script>
 		<script src="../parsers/hnms.js"></script>
 		<script src="../parsers/noaa.js"></script>
+		<script src="../storage.js"></script>
 		<script src="hnmsTests.js"></script>
 		<script src="noaaTests.js"></script>
+		<script src="storageTests.js"></script>
 	</body>
 </html>
