--- a/src/assets/www/index.html
+++ b/src/assets/www/index.html
@@ -9,6 +9,7 @@
 
         <script type="text/javascript" src="cordova-2.5.0.js"></script>
 		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 		<script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
         <script type="text/javascript" src="parsers/hnms.js"></script>
         <script type="text/javascript" src="parsers/noaa.js"></script>
@@ -73,8 +74,10 @@
 			</div>
 
 			<div data-role="content">
-		        <a href="#">Edit</a>
-				<table id="favoritesResults" data-role="table" class="ui-responsive"></table>
+		        <button data-inline="true">Edit</button>
+				<table data-role="table" class="ui-responsive">
+					<tbody id="favoritesResults"></tbody>
+				</table>
 			</div>
 		</div>
     </body>
