--- a/src/assets/www/index.html
+++ b/src/assets/www/index.html
@@ -35,9 +35,7 @@
 
 			<div data-role="content">
 		        <button data-inline="true">Edit</button>
-				<table data-role="table" class="ui-responsive">
-					<tbody id="favoritesResults"></tbody>
-				</table>
+		        <ul id="favoritesResults" data-role="listview" data-inset="true"></ul>
 			</div>
 		</div>
 
@@ -57,7 +55,7 @@
 			</div>
 
 			<div data-role="content">
-				<table id="allResults" data-role="table" class="ui-responsive"></table>
+		        <ul id="allResults" data-role="listview" data-filter="true" data-inset="true"></ul>
 			</div>
 		</div>
 
