--- a/src/assets/www/index.html
+++ b/src/assets/www/index.html
@@ -7,7 +7,7 @@
         <title>Greek Metars</title>
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.css" />
 
-        <script type="text/javascript" src="cordova-2.5.0.js"></script>
+<!--        <script type="text/javascript" src="cordova-2.5.0.js"></script>-->
 		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 		<script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
@@ -34,8 +34,16 @@
 			</div>
 
 			<div data-role="content">
-		        <div id="startEditDiv"><button data-inline="true" onclick="changeMode(true)">Edit List</button></div>
-		        <div id="stopEditDiv" style="display: none"><button id="stopEdit" data-inline="true" onclick="changeMode(false)">Done Editing</button></div>
+				<div style="text-align: right;">
+			        <div id="startEditDiv"><button data-inline="true" onclick="changeMode(true)">Edit List</button></div>
+			        <div id="stopEditDiv" style="display: none"><button id="stopEdit" data-inline="true" onclick="changeMode(false)">Done Editing</button></div>
+			        <div id="addDiv" style="display: none">
+			        	<fieldset data-role="controlgroup" data-type="horizontal">
+				        	<select id="selectNewStation" data-native-menu="false"></select>
+				        	<button data-inline="true" onclick="addStation()" data-icon="plus" data-iconpos="notext"></button>
+			        	</fieldset>
+			        </div>
+		        </div>
 		        <ul id="favoritesResults" data-role="listview" data-inset="true"></ul>
 			</div>
 		</div>
