--- a/src/assets/www/index.html
+++ b/src/assets/www/index.html
@@ -7,7 +7,7 @@
         <title>Greek Metars</title>
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.css" />
 
-<!--        <script type="text/javascript" src="cordova-2.5.0.js"></script>-->
+        <script type="text/javascript" src="cordova-2.5.0.js"></script>
 		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 		<script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
