--- a/src/assets/www/index.html
+++ b/src/assets/www/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <meta name="format-detection" content="telephone=no" />
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
         <title>Greek Metars</title>
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.css" />
 
-        <script type="text/javascript" src="cordova-2.5.0.js"></script>
+<!--         <script type="text/javascript" src="cordova-2.5.0.js"></script> -->
 		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 		<script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 		<script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
@@ -21,7 +21,7 @@
 		<div data-role="page" data-theme="d" id="favorites">
 			<div data-role="panel" id="menu" data-theme="c">
 		        <ul data-role="listview" data-theme="d">
-		            <li><a href="#favorites">My METARs</a></li>
+		            <li><a href="#favorites" class="ui-btn-active ui-state-persist">My METARs</a></li>
 		            <li><a href="#all">All METARs</a></li>
 		            <li><a href="#settings">Settings</a></li>
 		        </ul>
@@ -52,7 +52,7 @@
 			<div data-role="panel" id="menu" data-theme="c">
 		        <ul data-role="listview" data-theme="d">
 		            <li><a href="#favorites">My METARs</a></li>
-		            <li><a href="#all">All METARs</a></li>
+		            <li><a href="#all" class="ui-btn-active ui-state-persist">All METARs</a></li>
 		            <li><a href="#settings">Settings</a></li>
 		        </ul>
 			</div>
